font, color, margins in mobile view

--- a/css/tt.css
+++ b/css/tt.css
@@ -1,7 +1,8 @@
 
 body {
-    font-family: 'roboto', sans-serif;
+    font-family: 'Anton', sans-serif;
     margin: 0;
+    color: #5c5c5c;
     display: block;
 }
 .frame {
@@ -29,14 +30,24 @@ body {
     margin-bottom: 2rem;
     font-weight: 700;
 }
-.menu-right a {
+a {
     text-decoration: none;
-    
+    color: grey;    
 }
 img {
     box-sizing: border-box;
     padding: 0.1rem;
     display: block;
+}
+.taglist {
+    padding-bottom: 1rem;
+    list-style: circle;
+}
+.tagItem {
+    float: left;
+    padding-right: 2rem;
+    transform: rotate(4deg);
+
 }
 .artlist, .newslist {
     display: block;
@@ -66,7 +77,9 @@ img {
 }
 @media (max-width: 40rem) {
     .artlist {
-        width: calc(100% - 1rem);
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
     }
     .newslist {
         width: calc(100% - 1rem);
