--- a/css/tt.css
+++ b/css/tt.css
@@ -37,6 +37,10 @@ img {
     box-sizing: border-box;
     padding: 0.1rem;
     display: block;
+    max-width: 100%;
+}
+iframe {
+    max-width: 100%;
 }
 .artlist, .newslist {
     display: block;
