--- a/css/tt.css
+++ b/css/tt.css
@@ -2,8 +2,9 @@
 body {
     font-family: 'Anton', sans-serif;
     margin: 0;
-    color: #5c5c5c;
     display: block;
+    color: black;
+    font-size: x-large;
 }
 .frame {
     max-width: 60rem;
@@ -32,7 +33,7 @@ body {
 }
 a {
     text-decoration: none;
-    color: grey;    
+    color: black;    
 }
 img {
     box-sizing: border-box;
@@ -50,6 +51,8 @@ iframe {
 .tagItem {
     float: left;
     padding-right: 2rem;
+    padding-bottom: 0.5rem;
+    font-size: large;
     transform: rotate(4deg);
 
 }
@@ -69,23 +72,23 @@ iframe {
     color: white;
 }
 .artlist img, .newslist img {
-    max-width: 100%;
+    width: 100%;
 }
 @media (min-width: 40rem) {
     .artlist {
-        width: calc(33% - 1rem);
+        width: 33%;
     }
     .newslist {
-        width: calc(49% - 2rem);
+        width: calc(50% - 1rem);
     }
 }
 @media (max-width: 40rem) {
     .artlist {
+        width: calc(100%);
+    }
+    .newslist {
         width: 100%;
         margin-left: 0;
         margin-right: 0;
-    }
-    .newslist {
-        width: calc(100% - 1rem);
     }
 }
